# SimCLRExample

./: .env.example  .gitignore  README.md  main.py  notebook.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/experiment/: baseline_mlp.yaml  colab.yaml  full.yaml  gpu5090.yaml  mini.yaml
docs/: PIPELINE.md
lightning_logs/version_0/: hparams.yaml
lightning_logs/version_1/: metrics.csv
src/simclr_fraud/: __init__.py  cli.py  config.py  data.py  datasets.py  inference.py  paths.py  predict.py
src/simclr_fraud/evaluate/: __init__.py  plots.py  run.py
src/simclr_fraud/models/: __init__.py  classifier.py  encoder.py  lit_classifier.py  lit_simclr.py  losses.py  projection.py
src/simclr_fraud/train/: __init__.py  __main__.py  control.py  eval_only.py  finetune.py  pipeline.py  pretrain.py  utils.py
tests/: test_augmentation.py  test_control.py  test_evaluate.py  test_losses.py  test_predict.py  test_subset.py  test_wandb_config.py
tests/fixtures/: mini_paysim.csv
