[project]
name = "simclr-fraud"
version = "0.1.0"
description = "SimCLR-style contrastive pretraining for tabular fraud detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.12.0",
    "lightning==2.6.5",
    "wandb==0.27.2",
    "python-dotenv==1.2.2",
    "pandas==3.0.3",
    "numpy==2.4.6",
    "scikit-learn==1.9.0",
    "torchmetrics==1.9.0",
    "kagglehub==1.0.2",
    "hydra-core==1.3.3",
    "omegaconf==2.3.1",
    "matplotlib==3.11.0",
    "rich==15.0.0",
    "joblib==1.5.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "ipython",
    "torchinfo",
]

[project.scripts]
simclr-run = "simclr_fraud.cli:entrypoint"
simclr-predict = "simclr_fraud.predict:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
pythonVersion = "3.10"
